# cat-cafe

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  package.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: cafes.rs  cats.rs  mod.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css  tailwind.css
frontend/src/: lib.rs  main.rs  routes.rs
frontend/src/components/: about.rs  app.rs  base.rs  button.rs  cat_create_form.rs  cat_detail.rs  cat_form.rs  cat_list.rs  cat_table.rs  cats.rs  edit_modal.rs  footer.rs  header.rs  home.rs  input.rs  input_with_label.rs  mod.rs  navbar.rs  page_base.rs  page_not_found.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
