[package]
name = "backend"
version = "0.1.0"
authors = ["Kenneth Love <11908+kennethlove@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["macros", "multipart", "query"] }
dotenvy = "0.15.7"
minio-rsc = "0.2.3"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "js"] }

shared = { path = "../shared" }
serde = { version = "1.0.214", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
surrealdb = { version = "2.0.4", features = ["kv-mem"] }

[target.'cfg(unix)'.dependencies]
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
